[gd_scene load_steps=7 format=2]

[ext_resource path="res://gameplay/pickup_area/farm.png" type="Texture" id=1]
[ext_resource path="res://gameplay/pickup_area/pickup_area.gd" type="Script" id=2]
[ext_resource path="res://gameplay/cow_label/cow_counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/pickup_area/pickup_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://level_editor/clicable/clicable.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.6793, 66.1617 )

[node name="pickup_area" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 1.33203, -2.12371 )
shape = SubResource( 1 )

[node name="cow_label" parent="." instance=ExtResource( 3 )]
margin_top = -89.0
margin_bottom = -89.0

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="clicable" parent="." instance=ExtResource( 5 )]
position = Vector2( 1.40244, -2.55094 )
scale = Vector2( 6.5, 6.5 )

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_pickup_area_body_entered"]
